<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="tabs">
        <item>SQL Databases</item>
        <item>Files</item>
        <item>Key-Value Sets</item>
    </string-array>

    <string name="label_key_save">Key Saved</string>
    <string name="label_key_actual_timestamp">Actual Time</string>
    <string name="label_button_save">Save</string>
    <string name="label_button_load">Load</string>
    <string name="label_button_show">Show Contacts</string>
    <string name="label_button_delete">Delete Contact</string>
    <string name="hint_text_value">Insert text&#8230;&#8230;&#8230;</string>
    <string name="title_activity_file_saving">FileSavingActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_db_contact">Contact</string>

</resources>
