<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_tiny"
    android:columnCount="1" >

    <TableRow
        android:id="@+id/TableRow01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_db_contact" />

        <EditText
            android:id="@+id/db_field_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/buttonSaveContact"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_button_save" />
    </TableRow>

    <TableRow
        android:id="@+id/TableRow02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" >

        <Button
            android:id="@+id/buttonShowContact"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_button_show"/>

        <Button
            android:id="@+id/buttonDeleteContact"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/label_button_delete" />

    </TableRow>

    <ListView
        android:id="@+id/listViewContacts"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:layout_rowSpan="2"
        android:focusable="true"
        android:listSelector="@android:color/darker_gray" >

    </ListView>

</GridLayout>