<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_tiny">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/textValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_text_value"
                android:textAppearance="?android:attr/textAppearanceMedium" >

            <requestFocus /> 
            </EditText>
		    		    
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonSaveToFile"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button_save"
                android:width="96dp" />

            <Button
                android:id="@+id/buttonLoadFromFile"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button_load"
                android:width="96dp" />

        </TableRow>
        
</TableLayout>
